<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ResultadoActivity">

    <TextView
            android:text="@string/app_title"
            android:layout_width="0dp"
            style="@style/label_formulario"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTitle"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="36dp"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/masc_ideal"
            android:id="@+id/ivIMC" android:layout_marginTop="68dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" app:layout_constraintStart_toStartOf="@+id/textViewTitle"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/tvimcresult"
            android:layout_width="102dp"
            android:textSize="35sp"
            android:layout_height="41dp"
            android:id="@+id/tvIMC" app:layout_constraintStart_toEndOf="@+id/ivIMC"
            android:layout_marginStart="80dp" android:layout_marginTop="112dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle"/>
    <TextView
            android:text="@string/tvpesoresult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:id="@+id/tvStatusIMC"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/tvIMC"
            app:layout_constraintStart_toStartOf="@+id/tvIMC"/>
    <TextView
            android:text="@string/tvauthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>