<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/app_title"
            android:layout_width="0dp"
            style="@style/label_formulario"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:gravity="center"/>
    <TextView
            android:text="@string/tv_altura"
            style="@style/label_formulario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:id="@+id/textView2"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/textView"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/inputAltura"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2" app:layout_constraintEnd_toEndOf="@+id/textView2"
            android:hint="Ex.: 1.73 m"/>
    <TextView
            android:text="@string/tv_peso"
            style="@style/label_formulario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:id="@+id/textView3" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/inputAltura"
            app:layout_constraintStart_toStartOf="@+id/inputAltura" app:layout_constraintEnd_toEndOf="@+id/inputAltura"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/inputPeso"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3" app:layout_constraintEnd_toEndOf="@+id/textView3"
            android:hint="Ex.: 60 kg"/>
    <Button
            android:text="@string/btn_calcular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btCalcular"
            app:layout_constraintStart_toStartOf="@+id/inputPeso" app:layout_constraintEnd_toEndOf="@+id/inputPeso"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/spSexo"/>
    <Button
            android:text="@string/btn_limpar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btLimpar"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/btCalcular"
            app:layout_constraintStart_toStartOf="@+id/btCalcular"
            app:layout_constraintEnd_toEndOf="@+id/btCalcular" app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/tvsexo"
            style="@style/label_formulario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvSexo" app:layout_constraintStart_toStartOf="@+id/inputPeso"
            app:layout_constraintEnd_toEndOf="@+id/inputPeso" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/inputPeso" app:layout_constraintHorizontal_bias="0.0"/>
    <Spinner
            android:entries="@array/sexos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spSexo" app:layout_constraintStart_toStartOf="@+id/tvSexo"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSexo" app:layout_constraintEnd_toEndOf="@+id/tvSexo"/>
</androidx.constraintlayout.widget.ConstraintLayout>